--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ title-img: "/assets/img/OnlyFatnessNameBeige.png"
 social-network-links:
   email: "fat@onlyfatness.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-#  facebook: deanattali
+  facebook: TheBeerists
 #  github: daattali
 #  twitter: daattali
 #  patreon: DeanAttali
