--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ author: OnlyFatness
 
 navbar-links:
   About Us: "aboutme"
+  Merch:
+    - Printly $5 off: "http://www.printful.com/give-5-get-5/MN8757"
+    - OnlyFatness T-shirt: "https://www.printful.com/product-template/89608170/b353a918e72a774b14638ac38f98b8d7"
   Resources:
     - The Beerists Podcast: "https://www.facebook.com/TheBeerists"
     - USA Armageddon Lasertag Tournament: "https://www.facebook.com/groups/A20XXUS/"
