--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ author: OnlyFatness
 navbar-links:
   About Us: "aboutme"
   Merch:
-    - Printful $5 off: "http://www.printful.com/give-5-get-5/MN8757"
-    - OnlyFatness T-shirt: "https://www.printful.com/product-template/89608170/b353a918e72a774b14638ac38f98b8d7"
+    - Printful $5 off: "http://www.printful.com/give-5-get-5/MN8757"{:target="_blank"}
+    - OnlyFatness T-shirt: "https://www.printful.com/product-template/89608170/b353a918e72a774b14638ac38f98b8d7"{:target="_blank"}
   Resources:
-    - The Beerists Podcast: "https://www.facebook.com/TheBeerists"
-    - USA Armageddon Lasertag Tournament: "https://www.facebook.com/groups/A20XXUS/"
+    - The Beerists Podcast: "https://www.facebook.com/TheBeerists"{:target="_blank"}
+    - USA Armageddon Lasertag Tournament: "https://www.facebook.com/groups/A20XXUS/"{:target="_blank"}
 
 ################
 # --- Logo --- #
@@ -302,7 +302,6 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-target-blank
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
