--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ author: OnlyFatness
 
 navbar-links:
   About Us: "aboutme"
+  Support Beer: "https://www.paypal.com/pool/9fHJaMkVb1?sr=wccr"
   Merch:
     - Printful $5 off: "http://www.printful.com/give-5-get-5/MN8757"
     - OnlyFatness T-shirt: "https://www.printful.com/product-template/89608170/b353a918e72a774b14638ac38f98b8d7"
