--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ navbar-links:
     - Printful $5 off: "http://www.printful.com/give-5-get-5/MN8757"
     - OnlyFatness T-shirt: "https://www.printful.com/product-template/89608170/b353a918e72a774b14638ac38f98b8d7"
     - OnlyFatness Cap: "https://www.printful.com/product-template/89895710/c3cfb4654f92f3323b4778f7c9981299"
+    - Merch Info: "merch"
   Resources:
     - The Beerists Podcast: "https://thebeerists.com/"
     - The Beerists Facebook: "https://www.facebook.com/TheBeerists"
